@@ -87,7 +87,7 @@ if (in_array($clean_op,$valid_op,true)){
   		$objectTable->addColumn(new IcmsPersistableColumn('videos_id'));
   		$objectTable->addColumn(new IcmsPersistableColumn('uid_owner', false, false, 'getVideoSender'));
   		$objectTable->addColumn(new IcmsPersistableColumn('video_desc'));
-		$objectTable->addColumn(new IcmsPersistableColumn('youtube_code', 'center', 330, 'getVideoToDisplay'));
+		$objectTable->addColumn(new IcmsPersistableColumn('youtube_code', 'center', 330, 'getVideoToDisplay', false, false, false));
 
 		$objectTable->addQuickSearch(array('video_desc', 'youtube_code'));
   		$icmsAdminTpl->assign('profile_videos_table', $objectTable->fetch());
